teabox now has flex-wrap which solved the flexbox issue in center

--- a/resources/style.css
+++ b/resources/style.css
@@ -137,6 +137,8 @@ p {
 #teabox {
   display: flex;
   width: 100% auto;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #tea {
